# fmri-timescales

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
docs/: 01-introduction.tex  02-methods.tex  03-simulations.tex  04-data-analysis.tex  05-conclusions.tex  cover-letter.tex  imaging-neuroscience-latex-v1.tex  imaging-neuroscience-latex-v2.tex  imaging-neuroscience-latex.tex  imaging-neuroscience-response-v1.tex  imaging-neuroscience-response-v2.tex  main.tex  response-to-reviewers-2.tex  response-to-reviewers.tex  slides.tex  tmp.tex  wnar.tex  zotero.bib
examples/: 00-simulation-example.ipynb  01-hcp-example.ipynb  02-neuromaps-example.ipynb  autoreg-example.ipynb  autoreg.ipynb  autoreg.py  fig01to03.ipynb  fig01to03.py  fig04to05.ipynb  fig04to05.py  hcp-cifti.ipynb  hcp-example.ipynb  hcp-regions.ipynb  neuromaps.ipynb  simulation-time-domain.ipynb  simulation_time_domain.py  simulations.ipynb  simulations.py  sup_autoregression.ipynb
fmri_timescales/: __init__.py  acf_utils.py  plts.py  sim.py  timescale_utils.py
latex/: 00-slides.tex  01-introduction.tex  02-methods.tex  03-results.tex  03-simulations.tex  04-data-analysis.tex  04-discussion.tex  05-appendix.tex  05-conclusions.tex  autoreg.tex  fmri-timescales.bib  main.tex  manuscript.tex  references-zotero.bib  zotero.bib
notebooks/: fig01to03.ipynb  fig01to03.py  fig04to05.ipynb  fig04to05.py  fig06to07.ipynb  fig06to07.py  sup_autoregression.ipynb  sup_autoregression.py  sup_hcp-description.ipynb  sup_neuromaps.ipynb
scripts/: 01-hcp-example.ipynb
src/: acf.py  acf_utils.py  plts.py  sim.py  (+1 more)
(+12 files in other folders)
