[project]
name = "fmri-timescales"
version = "0.0.1"
description = "mapping the spatial gradients of timescales in the brain"
authors = [{name = "Gabriel Riegner", email = "gariegner@ucsd.edu"}]
dependencies = ["matplotlib", "nilearn", "statsmodels"]

[project.optional-dependencies]
dev = ["fmri-timescales[docs]", "pre-commit", "pytest"]
docs = ["notebook", "sphinx"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"