[project]
name = "fmri-timescales"
version = "0.0.1"
description = "Estimating fMRI Timescale Maps"
authors = [{name = "Gabriel Riegner", email = "gariegner@ucsd.edu"}]
dependencies = ["matplotlib==3.10.1", "nilearn==0.11.1", "statsmodels==0.14.1"]

[project.optional-dependencies]
notebooks = ["notebook", "hcp_utils"]
dev = ["fmri-timescales[notebooks]", "pytest"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["fmri_timescales"]